// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setCurrentPhraseID creates the correct payload 1`] = `
Object {
  "payload": "II/1",
  "type": "SET_CURRENT_PHRASE_ID",
}
`;

exports[`setCurrentTime creates the correct payload 1`] = `
Object {
  "payload": 30,
  "type": "SET_CURRENT_TIME",
}
`;

exports[`setNarrativeTab creates the correct payload 1`] = `
Object {
  "payload": 1,
  "type": "SET_NARRATIVE_TAB",
}
`;

exports[`setScoreToggles creates the correct payload 1`] = `
Object {
  "payload": Object {
    "isBeatOn": false,
    "isTextOn": false,
  },
  "type": "SET_SCORE_TOGGLES",
}
`;

exports[`setStartTime creates the correct payload 1`] = `
Object {
  "payload": 30,
  "type": "SET_START_TIME",
}
`;
